# xlpath

./: Cargo.toml  README.md  zensical.toml
.github/workflows/: docs.yml
docs/: examples.md  index.md  namespaces.md  output.md  see-also.md  usage.md
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  walk.rs  xlsx.rs  xpath.rs
tests/: integration.rs
tests/common/: mod.rs
